Fix #8505 cut-off Deskbar leaf bug.

Replace the leaf bitmap with a non-cutoff version derived from the
'data/artwork/Haiku Leaf' file. So, when icon size is > 16 the full
deskbar leaf is shown without the bottom cut-off. It should look
pretty much identical at 16x16 and in vertical mode at any icon size.

Also add a deskbar_leaf.png file to the data/artwork directory
although I didn't use that file in Deskbar, instead I embed an
archive bitmap into icons.h. I got rid of icon-freelogo.rdef and
icons_logo.h.