src/apps/deskbar/BarMenuBar.cpp
@@ -43,7 +43,7 @@ All rights reserved.
 #include <NodeInfo.h>
 
 #include "icons.h"
-#include "icons_logo.h"
+
 #include "BarWindow.h"
 #include "DeskbarMenu.h"
 #include "DeskbarUtils.h"
@@ -61,8 +61,10 @@ TBarMenuBar::TBarMenuBar(TBarView* bar, BRect frame, const char* name)
 	TDeskbarMenu* beMenu = new TDeskbarMenu(bar);
 	TBarWindow::SetDeskbarMenu(beMenu);
 
+	const BBitmap* logoBitmap = AppResSet()->FindBitmap(B_MESSAGE_TYPE,
+		R_LeafLogoBitmap);
 	fDeskbarMenuItem = new TBarMenuTitle(frame.Width(), frame.Height(),
-		AppResSet()->FindBitmap(B_MESSAGE_TYPE, R_LeafLogoBitmap), beMenu);
+		logoBitmap, beMenu);
 	AddItem(fDeskbarMenuItem);
 }
 
